user-service completo

--- a/transaction-api/src/main/resources/application.properties
+++ b/transaction-api/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=transaction-api
+server-port: 8082
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/beca_java
+spring.datasource.username=devuser
+spring.datasource.password=dev1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+spring.kafka.producer.properties.spring.json.add.type.headers=false
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
