--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=user-service
+server.port=8081
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/beca_java
+spring.datasource.username=devuser
+spring.datasource.password=dev1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+security.jwt.secret=troque-por-uma-chave-grande-e-segura-com-32-chars-ou-mais
+security.jwt.expiration-minutes=60
