--- a/transaction-processor/src/main/resources/application.properties
+++ b/transaction-processor/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=transaction-processor
+server.port=8083
+
+spring.datasource.url=jdbc:postgresql://localhost:5433/beca_java
+spring.datasource.username=devuser
+spring.datasource.password=dev1234
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=transaction-processor
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.value.default.type=com.beca.financial.transaction_processor.events.TransactionRequestedEvent
+
+transaction.api.base-url=http://localhost:8082
