--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -111,7 +111,14 @@
             <version>2.2.42</version>
             <scope>compile</scope>
         </dependency>
-	</dependencies>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
+
+    </dependencies>
 
 	<build>
 		<plugins>
