--- a/transaction-api/pom.xml
+++ b/transaction-api/pom.xml
@@ -115,7 +115,10 @@
             <scope>compile</scope>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
 
     </dependencies>
 
