--- a/transaction-api/src/main/resources/application.properties
+++ b/transaction-api/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=transaction-api
 
+spring.flyway.enabled=true
 spring.datasource.url=jdbc:postgresql://localhost:5433/beca_java
 spring.datasource.username=devuser
 spring.datasource.password=dev1234
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
