--- a/transaction-processor/src/main/resources/application.properties
+++ b/transaction-processor/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 
-spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.beca.financial.transaction_processor.events
 spring.kafka.consumer.properties.spring.json.value.default.type=com.beca.financial.transaction_processor.events.TransactionRequestedEvent
 
 transaction.api.base-url=http://localhost:8082
