--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -118,6 +118,11 @@
             <version>5.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+
     </dependencies>
 
 	<build>
