--- a/transaction-api/src/main/resources/application.properties
+++ b/transaction-api/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 
 spring.kafka.producer.properties.spring.json.add.type.headers=false
 
-springdoc.api-docs.path=/v3/api-docs
-springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.enabled=false
+springdoc.swagger-ui.enabled=false
