--- a/transaction-processor/src/main/resources/application.properties
+++ b/transaction-processor/src/main/resources/application.properties
@@ -17,3 +17,7 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=com.beca.financial
 spring.kafka.consumer.properties.spring.json.value.default.type=com.beca.financial.transaction_processor.events.TransactionRequestedEvent
 
 transaction.api.base-url=http://localhost:8082
+
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+spring.kafka.producer.properties.spring.json.add.type.headers=false
